--- a/BTL/Bai_Tap_Lon.csproj
+++ b/BTL/Bai_Tap_Lon.csproj
@@ -100,6 +100,12 @@
     <Compile Include="MacroButton.Designer.cs">
       <DependentUpon>MacroButton.cs</DependentUpon>
     </Compile>
+    <Compile Include="MoreMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MoreMenu.Designer.cs">
+      <DependentUpon>MoreMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThucDon.cs">
@@ -109,6 +115,12 @@
       <DependentUpon>ThucDon.cs</DependentUpon>
     </Compile>
     <Compile Include="Thuc_don.cs" />
+    <Compile Include="VanDong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VanDong.Designer.cs">
+      <DependentUpon>VanDong.cs</DependentUpon>
+    </Compile>
     <Compile Include="Welcome.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +145,9 @@
     <EmbeddedResource Include="MacroButton.resx">
       <DependentUpon>MacroButton.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MoreMenu.resx">
+      <DependentUpon>MoreMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -143,6 +158,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="VanDong.resx">
+      <DependentUpon>VanDong.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Welcome.resx">
       <DependentUpon>Welcome.cs</DependentUpon>
     </EmbeddedResource>
